package protobuf;

import "event/message/protobuf/message_betting.proto";
import "event/message/protobuf/message_deal.proto";
import "event/message/protobuf/message_play.proto";
import "event/message/protobuf/message_showdown.proto";
import "event/message/protobuf/message_table.proto";

// ErrorMessage - notify error
message ErrorMessage {
  required string Error = 1;
}

// ChatMessage - notify chat message
message ChatMessage {
  required int32 pos = 1;
  required string Body = 2;
}

// DealerMessage - notify dealer message
message DealerMessage {
  required string Body = 1;
}

// Payload - different message types container
message Message {
  optional ErrorMessage ErrorMessage = 1;
  optional ChatMessage ChatMessage = 2;
  optional DealerMessage DealerMessage = 3;

  // gameplay
  optional PlayStart PlayStart = 4;
  optional PlayStop PlayStop = 5;
  optional StreetStart StreetStart = 6;
  optional BettingComplete BettingComplete = 7;

  // table
  optional JoinTable JoinTable = 8;
  optional LeaveTable LeaveTable = 9;
  optional SitOut SitOut = 10;
  optional ComeBack ComeBack = 11;
  optional MoveButton MoveButton = 12;

  // betting
  optional RequireBet RequireBet = 13;
  optional AddBet AddBet = 14;

  // dealing
  optional DealCards DealCards = 15;
  optional RequireDiscard RequireDiscard = 16;
  optional Discarded Discarded = 17;
  optional DiscardCards DiscardCards = 18;

  // showdown
  optional ShowHand ShowHand = 19;
  optional ShowCards ShowCards = 20;
  optional Winner Winner = 21;
}

/*message Notify {
  optional bool All = 1;
  optional bool None = 2;
  optional string One = 3;
  repeated string Only = 4;
  repeated string Except = 5;
}*/

// Message - envelope wrapper
message Event {
  required string Type = 1;
  required int64 Timestamp = 2;
  //optional Notify Notify = 3;
  required Message Message = 4;
}
